feat: Add icon showcase, serial executor, and controller widgets
- Implemented IconShowcase widget to display app icons with their names and code points.
- Created SerialExecutor class for managing tasks in a serial manner.
- Added ControllerBuilder, ControllerConsumer, and ControllerListener widgets for state management.
- Developed AppController and AppState for managing application state.
- Introduced user model classes: UserEntity, UnauthorizedUser, and AuthorizedUser.
- Implemented FirebaseAuthRepository for authentication operations.
- Created placeholder widgets for UI consistency.
- Added initial routing setup with GoRouter for navigation.
- Developed login, register, onboarding, and home screens.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
   async: any
   collection: any
   meta: any
+  go_router: any
+
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
+  firebase_ui_auth: ^3.0.1
 
 dev_dependencies:
   flutter_test:
